--- a/sajat.css
+++ b/sajat.css
@@ -1,3 +1,9 @@
 body{
     background-color: cornflowerblue;
 }
+
+.container{
+    background-color: white;
+    border-radius: 15px;
+    margin: 10px auto;
+}
